# poellebonheur

./: .env.example  .gitignore  Cargo.toml  Dioxus.toml  README.md  amplify.yml  next.config.js  package-lock.json  package.json  tailwind.config.js  vercel.json
api/: send-devis.js
api/admin/: market.js  menu.js
app/: globals.css  layout.tsx  page.tsx
app/admin/: page.tsx
app/api/admin/collage/: route.ts
app/api/admin/login/: route.ts
app/api/admin/market/: route.ts
app/api/admin/menu/: route.ts
app/api/admin/quotes/: route.ts
app/api/admin/upload-photo/: route.ts
app/api/public/collage/: route.ts
app/api/public/market/: route.ts
app/api/public/media/: route.ts
app/api/public/menu/: route.ts
app/api/send-devis/: route.ts
app/components/: Footer.tsx  Navbar.tsx  PhotoCollage.tsx
app/devis/: page.tsx
app/lib/: image-placeholder.ts
lambdas/: Cargo.toml
lambdas/src/: lib.rs
lib/: storage-env.ts
public/: Dessert1.avif  Entree1.avif  Plat1.avif  Repas2.avif  Repas3.avif  market.json  tailwind.css
scripts/: clean-next.js  sync-public-assets.sh
src/: app.rs  config.rs  fileserv.rs  lib.rs  main.rs  models.rs
src/components/: footer.rs  navbar.rs
src/pages/: admin.rs  devis.rs  home.rs  mod.rs
src/server/: auth.rs  config.rs  functions.rs  mod.rs  storage.rs
style/: input.css
