[package]
name = "traiteur-website"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# ── Dépendances partagées (server + client) ───────────────────────────────────
[dependencies]
leptos        = { version = "0.6", features = [] }
leptos_meta   = { version = "0.6", features = [] }
leptos_router = { version = "0.6", features = [] }
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
thiserror     = "1"
http          = "1"

# ── Server-only ───────────────────────────────────────────────────────────────
leptos_axum        = { version = "0.6",  optional = true }
axum               = { version = "0.7",  optional = true, features = ["multipart"] }
tokio              = { version = "1",    optional = true, features = ["rt-multi-thread"] }
tower              = { version = "0.5",  optional = true }
tower-http         = { version = "0.5",  optional = true, features = ["fs"] }
aws-config         = { version = "1",    optional = true, features = ["behavior-version-latest"] }
aws-sdk-s3         = { version = "1",    optional = true }
jsonwebtoken       = { version = "9",    optional = true }
bcrypt             = { version = "0.15", optional = true }
uuid               = { version = "1",    optional = true, features = ["v4"] }
chrono             = { version = "0.4",  optional = true, features = ["serde"] }
anyhow             = { version = "1",    optional = true }
dotenvy            = { version = "0.15", optional = true }
tracing            = { version = "0.1",  optional = true }
tracing-subscriber = { version = "0.3",  optional = true, features = ["env-filter"] }

# ── Client-only (WASM) ────────────────────────────────────────────────────────
wasm-bindgen              = { version = "0.2", optional = true }
console_error_panic_hook  = { version = "0.1", optional = true }
web-sys                   = { version = "0.3", optional = true, features = ["Window", "Document", "Element", "HtmlElement", "HtmlBodyElement", "CssStyleDeclaration", "History", "ScrollRestoration"] }

# ── Features ──────────────────────────────────────────────────────────────────
[features]
default = []

hydrate = [
  "leptos/hydrate",
  "leptos_meta/hydrate",
  "leptos_router/hydrate",
  "dep:wasm-bindgen",
  "dep:console_error_panic_hook",
  "dep:web-sys",
]

ssr = [
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "dep:leptos_axum",
  "dep:axum",
  "dep:tokio",
  "dep:tower",
  "dep:tower-http",
  "dep:aws-config",
  "dep:aws-sdk-s3",
  "dep:jsonwebtoken",
  "dep:bcrypt",
  "dep:uuid",
  "dep:chrono",
  "dep:anyhow",
  "dep:dotenvy",
  "dep:tracing",
  "dep:tracing-subscriber",
]

# ── Binaire serveur ───────────────────────────────────────────────────────────
[[bin]]
name = "traiteur-website"
path = "src/main.rs"
required-features = ["ssr"]

# ── Configuration cargo-leptos ────────────────────────────────────────────────
[package.metadata.leptos]
name               = "traiteur-website"
site-root          = "target/site"
site-pkg-dir       = "pkg"
tailwind-input-file = "style/input.css"
assets-dir         = "public"
site-addr          = "127.0.0.1:3000"
reload-port        = 3001
env                = "DEV"
bin-features       = ["ssr"]
lib-features       = ["hydrate"]
