[package]
name = "traiteur-website"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# ── Dépendances partagées ─────────────────────────────────────────────────────
[dependencies]
dioxus     = { version = "0.6", features = ["fullstack", "router"] }
serde      = { version = "1",   features = ["derive"] }
serde_json = "1"
thiserror  = "1"

# HTTP client (client: fetch API / serveur: native)
reqwest = { version = "0.12", features = ["json"] }

# ── Server-only ───────────────────────────────────────────────────────────────
aws-config         = { version = "1",    optional = true, features = ["behavior-version-latest"] }
aws-sdk-s3         = { version = "1",    optional = true }
bcrypt             = { version = "0.15", optional = true }
uuid               = { version = "1",    optional = true, features = ["v4"] }
chrono             = { version = "0.4",  optional = true, features = ["serde"] }
dotenvy            = { version = "0.15", optional = true }
tokio              = { version = "1",    optional = true, features = ["full"] }
axum               = { version = "0.7",  optional = true, features = ["multipart"] }
tower-http         = { version = "0.5",  optional = true, features = ["fs"] }
tracing-subscriber = { version = "0.3",  optional = true }

# ── Client-only (WASM) ────────────────────────────────────────────────────────
[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-storage = "0.3"
web-sys      = { version = "0.3", features = ["Window", "Document", "HtmlElement", "HtmlBodyElement", "CssStyleDeclaration", "History", "ScrollRestoration", "Location"] }

# ── Features ──────────────────────────────────────────────────────────────────
[features]
default = []
web = ["dioxus/web"]
server = [
    "dioxus/server",
    "dep:aws-config",
    "dep:aws-sdk-s3",
    "dep:bcrypt",
    "dep:uuid",
    "dep:chrono",
    "dep:dotenvy",
    "dep:tokio",
    "dep:axum",
    "dep:tower-http",
    "dep:tracing-subscriber",
]

[[bin]]
name = "traiteur-website"
path = "src/main.rs"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[package.metadata.dioxus]
default-platform = "fullstack"
