[package]
name = "traiteur-website"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dioxus     = { version = "0.6", features = ["web", "router"] }
serde      = { version = "1",   features = ["derive"] }
serde_json = "1"
reqwest    = { version = "0.12", features = ["json"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-storage = "0.3"
web-sys      = { version = "0.3", features = ["Window", "Document", "Element", "DomTokenList", "HtmlElement", "HtmlBodyElement", "CssStyleDeclaration", "History", "ScrollRestoration", "Location"] }
js-sys       = "0.3"

[[bin]]
name = "traiteur-website"
path = "src/main.rs"

[profile.wasm-dev]
inherits  = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[package.metadata.dioxus]
default-platform = "web"
