[package]
name = "traiteur-lambdas"
version = "0.1.0"
edition = "2021"

# ── Dépendances Lambda ────────────────────────────────────────────────────────
[dependencies]
lambda_http          = "0.14"
tokio                = { version = "1", features = ["full"] }
serde                = { version = "1", features = ["derive"] }
serde_json           = "1"
anyhow               = "1"
tracing              = "0.1"
tracing-subscriber   = { version = "0.3", features = ["env-filter"] }

# AWS
aws-config  = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3  = "1"

# Email
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }

# Divers
chrono = { version = "0.4", features = ["serde"] }
uuid   = { version = "1", features = ["v4"] }

# ── Binaires ──────────────────────────────────────────────────────────────────
[[bin]]
name = "send-devis"
path = "src/bin/send_devis.rs"

[[bin]]
name = "admin-market"
path = "src/bin/admin_market.rs"

[[bin]]
name = "admin-menu"
path = "src/bin/admin_menu.rs"

# ── Profil release optimisé Lambda ────────────────────────────────────────────
[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
strip         = true
